--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,7 @@
         android:layout_width="358dp"
         android:layout_height="367dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.075"
+        app:layout_constraintEnd_toEndOf="@+id/simpleEditText"
         app:layout_constraintStart_toStartOf="@+id/addBtn"
         app:layout_constraintTop_toBottomOf="@+id/addBtn"
         app:layout_constraintVertical_bias="0.263" />
@@ -31,16 +30,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="120dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.108"
+    <EditText
+        android:id="@+id/simpleEditText"
+        android:layout_width="204dp"
+        android:layout_height="52dp"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="100dp"
+        android:hint="Enter Your Name Here"
+        app:layout_constraintBottom_toTopOf="@+id/listView"
         app:layout_constraintStart_toEndOf="@+id/addBtn"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
